# GPX_analysis

./: LICENSE  README.md  gpxanalysis.cabal
data/: little.gpx  run.gpx  short.gpx
src/: GPXGarmin.hs  GPXhandling.hs  Haversine.hs  Main.hs  REPL.hs
test/: Spec.hs
