name:                gpxanalysis
version:             0.1.0.0
synopsis:            GPX Analysis
license:             BSD3
license-file:        LICENSE
author:              Andrew Butterfield
maintainer:          Andrew.Butterfield@scss.tcd.ie
category:            GPX, XML
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:      base,
                      directory,
                      time,
                      xml

  hs-source-dirs:     src/
  default-language:   Haskell2010

executable gpxanalysis
  main-is:            Main.hs
  build-depends:      base,
                      directory,
                      time,
                      xml
  other-modules:      GPXGarmin,
                      Haversine,
                      REPL,
                      GPXhandling


  hs-source-dirs:     src/
  default-language:   Haskell2010

test-suite Main
  main-is: Spec.hs
  type: exitcode-stdio-1.0
  x-uses-tf: true
  build-depends:  base,
                  directory,
                  time,
                  xml,
                  HUnit,
                  test-framework,
                  test-framework-hunit,
                  test-framework-quickcheck2
  other-modules:  GPXGarmin
                  Haversine
                  REPL
                  GPXhandling
  hs-source-dirs: test, src
  default-language: Haskell2010
